<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>beluga_rviz_plugins</name>
    <version>0.1.0</version>
    <description>
        RViz2 plugin for displaying OpenVDB voxel data
    </description>
    <author email="pablovela@naver.com">Pablo Vela</author>
    <maintainer email="pablovela@naver.com">Pablo Vela</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rviz_common</depend>
    <depend>rviz_default_plugins</depend>
    <depend>rviz_rendering</depend>
    <depend>libopenvdb-dev</depend>
    <depend>pluginlib</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
